--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-devtools": "^4.36.1",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^5.0.0",
