fix: update CORS headers to include dynamic FRONTEND_URL and ensure .env is ignored

--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,5 @@ JWT_REFERNCE_TOKEN = awefawfawfsegfaesfw3eiufnqo2smqoi2bedo12neoibui
 JWT_ACCESS_TOKEN = sekfbskfnqpklwdkpsklrgjvnseklnfvsklenklsenfklna
 
 SERVER_IP_ADDRESS = http://localhost:3000/uploads/cabins/
+
+FRONTEND_URL: https://the-wild-oasis-blue-six.vercel.app
